--- a/portuguese_bank_project.ipynb
+++ b/portuguese_bank_project.ipynb
@@ -52,7 +52,7 @@
     "- contact: 連絡手段 (categorical: 'cellular','telephone')\n",
     "- day: 前回このキャンペーンで連絡を取った日 (categorical: 1 ~ 31)\n",
     "- month: 前回このキャンペーンで連絡を取った月 (categorical: 'jan', 'feb', 'mar', ..., 'nov', 'dec')\n",
-    "- duration: 前回このキャンペーンで連絡を取った時に話をした時間(秒)\n",
+    "- duration: 前回このキャンペーンで連絡を取った時に話をした秒数\n",
     "\n",
     "- campaign: この顧客が口座開設後にこのキャンペーンを行った回数\n",
     "- pdays: 前回この顧客にこのキャンペーンで連絡を取った日から何日経過しているか (-1は連絡を取っていないと言う意味)\n",
@@ -909,7 +909,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2 数量データ (`age`,`balance`,`duration`,`campaign`,`previous`)と`y`(定期預金をしているか、していないか)の関係を確認する。"
+    "### 3.2 数量データ (`age`(年齢),`balance`(口座残高),`duration`(前回このキャンペーンで連絡を取った時に話をした秒数),`campaign`(この顧客が口座開設後にこのキャンペーンを行った回数),`previous`(過去何回このキャンペーンで連絡を取ったか)と`y`(定期預金をしているか、していないか)の関係を確認する。"
    ]
   },
   {
@@ -1079,7 +1079,7 @@
    "metadata": {},
    "source": [
     "`age`と`previous`をグループで分けて定期預金してる人の割合を確認する:\n",
-    "- previous(過去何回このキャンペーンで連絡を取ったか)が0の顧客より人数はかなり少ないが1回以上連絡を取った顧客は定期預金をしている確率は上がる。この作成した特徴量(`previous_group`)を機械学習モデルでも使う\n",
+    "- `previous`が0の顧客より人数はかなり少ないが1回以上連絡を取った顧客は定期預金をしている確率は上がる。この作成した特徴量(`previous_group`)を機械学習モデルでも使う\n",
     "- 人数は少ないが60歳以上の人は定期預金をしている確率は高い。年齢で定期預金をしている確率はさがあるように見える。この作成した特徴量(`age_group`)を機械学習モデルでも使う"
    ]
   },
@@ -1128,7 +1128,7 @@
    "metadata": {},
    "source": [
     "`age`,`balance`,`duration`,`campaign`,`previous`をボックスプロットで確認する:\n",
-    "- 'age' 以外では外れ値が目立つので外れ値を外してバイオリンプロットを確認してみる"
+    "- `age` 以外では外れ値が目立つので外れ値を外してバイオリンプロットを確認してみる"
    ]
   },
   {
@@ -1177,8 +1177,8 @@
    "metadata": {},
    "source": [
     "`age`,`balance`,`duration`,`campaign`,`previous`をバイオリンプロットで確認する:\n",
-    "- 'duration'(前回このキャンペーンで連絡を取った時に話をした時間)が低い顧客は定期預金をしてない人の割合が多い。大体6分30秒(400以上の顧客は定期預金をしている人の割合が多い\n",
-    "- 'balance','duration','campaign','previous'の外れ値を除去して機械学習モデルで学習、検証する。"
+    "- `duration`が低い顧客は定期預金をしてない人の割合が多い。大体6分30秒(400以上の顧客は定期預金をしている人の割合が多い\n",
+    "- `balance`,`duration`,`campaign`,`previous`の外れ値を除去して機械学習モデルで学習、検証する。"
    ]
   },
   {
@@ -1359,7 +1359,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3 カテゴリーデータ(`job`,`marital`,`education`,`default`,`housing`,`loan`,`contact`,`day`,`month`,`day_of_week`,`bucket_pdays`)と`y`(定期預金をしているか、していないか)の関係を確認する。"
+    "### 3.3 カテゴリーデータ(`job`(職業),`marital`(配偶者の有無),`education`(学歴),`default`(過去にローンの支払いの遅れなどの不履行の有無),`housing`(住宅ローンの有無),`loan`(個人ローンの有無),`contact`(連絡手段),`day`(前回キャンペーンで連絡を取った日),`month`(前回キャンペーンで連絡を取った月),`day_of_week`(前回このキャンペーンで連絡を取った曜日),`bucket_pdays`(前回この顧客にこのキャンペーンで連絡を取った日から何日経過しているか)と`y`(定期預金をしているか、していないか)の関係を確認する。"
    ]
   },
   {
@@ -1367,7 +1367,7 @@
    "id": "60129d4c",
    "metadata": {},
    "source": [
-    "#### 3.3.1 棒グラフでカテゴリーデータ(`job`,`marital`,`education`,`default`,`housing`,`loan`,`contact`,`day`,`month`,`day_of_week`,`bucket_pdays`)と`y`(定期預金をしているか、していないか)の関係を確認する。"
+    "#### 3.3.1 棒グラフでカテゴリーデータ(`job`,`marital`,`education`,`default`,`housing`,`loan`,`contact`,`day`,`month`,`day_of_week`,`bucket_pdays`)と`y`の関係を確認する。"
    ]
   },
   {
@@ -1432,7 +1432,7 @@
    "metadata": {},
    "source": [
     "棒グラフでカテゴリーデータ(`job`,`marital`,`education`,`default`,`housing`,`loan`,`contact`,`day`,`month`,`day_of_week`,`bucket_pdays`)と`y`(定期預金をしているか、していないか)の関係を確認する。\n",
-    "- `housing`(住宅ローンの有無)はnoの顧客はyesの顧客より定期預金をしてる人の割合が上がり、定期預金をしてない人の割合が下がっていることが分かる。\n",
+    "- `housing`はnoの顧客はyesの顧客より定期預金をしてる人の割合が上がり、定期預金をしてない人の割合が下がっていることが分かる。\n",
     "- 人数は少ないが`month`のいくつかの月で定期預金をしている顧客の割合が高そうなので折れ線グラフで確認する。"
    ]
   },
